# rzn

./: .gitignore  pyproject.toml
assistant/: requirements.txt
assistant/assistant/: settings.py  urls.py
assistant/rzn/: apps.py  models.py
assistant/rzn/actions/: completeness.py  general.py  key.py  urls.py  web.py
assistant/rzn/fixtures/: notices.json  types.json
assistant/rzn/migrations/: 0001_initial.py
assistant/scheduler/: jobs.py  updater.py
assistant/tg_bot/: views.py
assistant/users/: models.py
assistant/users/migrations/: 0001_initial.py
